--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Mock api for testing porposes",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/avandriets/products-static-api/issues"
   },
-  "homepage": "https://github.com/avandriets/products-static-api#readme"
+  "homepage": "https://github.com/avandriets/products-static-api#readme",
+  "devDependencies": {
+    "mockserver": "^3.1.1"
+  }
 }
